<resources>
    <string name="app_name">AndroidDev_part3</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="image">Image</string>
    <string name="animation">Animation</string>
    <string name="work_with_images_audio_and_video">Work with images,audio and video</string>
    <string name="video_activity">Video activity</string>
    <string name="stop">Stop</string>
    <string name="audio_activity">Audio activity</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="Pause">Pause</string>
</resources>